log
Fri 29 Mar 2024 08:02:44 PM UTC: 
 tests:  0|6
total_score: 0/70
3b4e345
Fri 29 Mar 2024 09:02:23 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9ceea73
Fri 29 Mar 2024 09:03:04 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
e53aaa5
Fri 29 Mar 2024 09:09:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
50e80fb
Fri 29 Mar 2024 09:10:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cdf80f9
Fri 29 Mar 2024 09:10:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
09ffec5
Fri 29 Mar 2024 09:18:27 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 25/70
c0cc5fe
Fri 29 Mar 2024 09:19:29 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
ad9c226
Fri 29 Mar 2024 09:21:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
dd7498e
Fri 29 Mar 2024 09:22:26 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e937ad9
Fri 29 Mar 2024 09:23:08 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
be939d0
Fri 29 Mar 2024 09:23:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
63c8ecf
Fri 29 Mar 2024 09:25:23 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:66:26: error: expected identifier before ‘)’ token
   66 |     list->current->prev->) {
      |                          ^
Compilation failed
8e43624
